add final check

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -202,7 +202,7 @@ h4 {
 .btn-style {
     padding: 9px 8px;
 }
-/* -------------------------------- Background images CREDIT: solution from stackoverflow for iOS devices------------------------------- */
+/* -------------------------------- Background images CREDIT: solution/code for iOS devices from stackoverflow for iOS devices------------------------------- */
 .e-with-fixed-bg {
   width: 100%;
   height: 700px;
