--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -205,7 +205,7 @@ h4 {
 /* -------------------------------- Background images CREDIT: solution/code for iOS devices from stackoverflow for iOS devices------------------------------- */
 .e-with-fixed-bg {
   width: 100%;
-  height: 700px;
+  height: 100%;
   
   /* Important */
   position: relative;
